<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/window_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_tipo"
                android:id="@+id/lbl_tipo" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_tipo">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_lbl_tipo_egreso"
                    android:id="@+id/radio_tipo_egreso" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_lbl_tipo_ingreso"
                    android:id="@+id/radio_tipo_ingreso" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_lbl_tipo_transferencia"
                    android:id="@+id/radio_tipo_transferencia" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_categoria"
                android:id="@+id/lbl_categoria" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_categoria" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_n_categoria"
                android:id="@+id/lbl_n_categoria"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_n_categoria"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_cuenta"
                android:id="@+id/lbl_cuenta" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_cuenta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_n_cuenta"
                android:id="@+id/lbl_n_cuenta"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_n_cuenta"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_fecha"
                android:id="@+id/lbl_fecha" />

            <!--DATE TIME PICKER START-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_fecha_format"
                    android:focusable="false"/>

                <ImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:src="@mipmap/ic_dp_28"
                    android:id="@+id/btn_dp"/>

            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_fecha"
                android:visibility="gone"/>

            <!--DATE TIME PICKER END-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_valor"
                android:id="@+id/lbl_valor" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/txt_valor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/m_lbl_descripcion"
                android:id="@+id/lbl_descripcion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_descripcion" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/btn_cancelar"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/primary_button_press"
                    android:textColor="@color/text_icon_color"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="2dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:id="@+id/btn_guardar"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="2dp"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/primary_button"
                    android:textColor="@color/text_icon_color"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>