<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/window_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/c_lbl_nombre"
                android:id="@+id/lbl_nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_nombre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/c_lbl_presupuesto"
                android:id="@+id/lbl_presupuesto" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_presupuesto"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/btn_cancelar"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/primary_button_press"
                    android:textColor="@color/text_icon_color"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="2dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:id="@+id/btn_guardar"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="2dp"
                    android:textSize="@dimen/button_font_size"
                    android:background="@drawable/primary_button"
                    android:textColor="@color/text_icon_color"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>